--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ nav ul .fleft li, nav ul .fright li {
     border: 1px solid #c6c6c6;
     background-image: linear-gradient(#f5f5f5, #f1f1f1);
     color: #000;
+    cursor: pointer;
 }
 
 
